--- a/com.tool.small.mydsl/build.gradle
+++ b/com.tool.small.mydsl/build.gradle
@@ -15,6 +15,16 @@ dependencies {
 	mwe2 "org.eclipse.xtext:xtext-antlr-generator:[2.1.1, 3)"
 }
 
+sourceSets.main { java.srcDir 'mylib' }
+
+sourceSets {
+  main { output.resourcesDir = 'mylib' }
+}
+
+sourceSets.main {
+  java.srcDir 'mylib'
+}
+
 task generateXtextLanguage(type: JavaExec) {
 	main = 'org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher'
 	classpath = configurations.mwe2
